--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -2,6 +2,9 @@
 /dist
 /node_modules
 
+# prisma
+/prisma/migrations
+
 # Logs
 logs
 *.log
@@ -13,6 +16,9 @@ lerna-debug.log*
 
 # OS
 .DS_Store
+
+# env
+.env
 
 # Tests
 /coverage
