--- a/back-end/.env
+++ b/back-end/.env
@@ -7,3 +7,7 @@
 DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
 
 JWT_SECRET_KEY="123456"
+
+PATH_AVATAR_USERS="${HOME}/avatar_users_images/"
+
+PATH_QR_CODES="${HOME}/qrcodes_users/"
