--- a/back-end/.env
+++ b/back-end/.env
@@ -6,8 +6,10 @@
 
 DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
 
-JWT_SECRET_KEY="123456"
+SECRET_JWT_TOKEN="123456"
 
 PATH_AVATAR_USERS="${HOME}/avatar_users_images/"
 
 PATH_QR_CODES="${HOME}/qrcodes_users/"
+
+PORT="3333"
