--- a/back-end/package.json
+++ b/back-end/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^5.4.2",
     "argon2": "^0.31.1",
     "passport": "^0.6.0",
@@ -46,6 +47,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.13",
     "@types/qrcode": "^1.5.4",
