finaly the auth service is done , aka refresh access strategy

--- a/back-end/.env
+++ b/back-end/.env
@@ -8,6 +8,12 @@ DATABASE_URL="postgresql://postgres:123@localhost:5434/nest?schema=public"
 
 SECRET_JWT_TOKEN="123456"
 
+ENCRYPT_SECRET="secret"
+
+ALGORITHM_ENCRYPT="aes-256-cbc"
+
+SALT_ENCRYPT="qslkdqskljdnqskjfnskjdfnq"
+
 PATH_AVATAR_USERS="${HOME}/avatar_users_images/"
 
 PATH_QR_CODES="${HOME}/qrcodes_users/"
