--- a/back-end/package.json
+++ b/back-end/package.json
@@ -34,8 +34,10 @@
     "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^5.4.2",
     "argon2": "^0.31.1",
+    "crypto": "^1.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "prisma": "^5.5.2",
     "qrcode": "^1.5.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -60,7 +62,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
