--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -3,13 +3,20 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name 192.168.1.30;
+    server_name 192.168.28.239;
 
     ssl_certificate /etc/nginx/ssl/transcendence.crt;
-	ssl_certificate_key /etc/nginx/ssl/transcendence.key;
+	ssl_certificate_key /etc/nginx/ssl/server.key;
 	ssl_protocols TLSv1.2;
 
     location / {
         proxy_pass http://front-end:3000;
     }
+}
+
+server {
+    listen 80;
+    server_name obachbghitingolhalk.com;
+
+    return 301 https://$host$request_uri;
 }
