--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -1,22 +1,19 @@
 server {
 
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 80;
+    listen [::]:80;
 
-    server_name 192.168.28.239;
-
-    ssl_certificate /etc/nginx/ssl/transcendence.crt;
-	ssl_certificate_key /etc/nginx/ssl/server.key;
-	ssl_protocols TLSv1.2;
+    server_name 192.168.1.62;
 
     location / {
         proxy_pass http://front-end:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
-}
 
-server {
-    listen 80;
-    server_name obachbghitingolhalk.com;
-
-    return 301 https://$host$request_uri;
+    location /api {
+        proxy_pass http://back-end:3333;
+    }
 }
