--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -2,8 +2,6 @@ FROM node:latest
 
 WORKDIR /app
 
-RUN mkdir -p /app/env/
-
 COPY package*.json .
 
 RUN npm install 
@@ -18,10 +16,6 @@ RUN npm install @prisma/client
 
 RUN npx prisma generate
 
-# CMD [ "tail", "-f" ]
+RUN npm run build
 
 ENTRYPOINT [ "npm", "run", "start:prod" ]
-
-# RUN chmod 777 script/script.sh
-
-# ENTRYPOINT ["script/script.sh"]
