--- a/back-end/package.json
+++ b/back-end/package.json
@@ -34,7 +34,9 @@
     "@nestjs/schedule": "^4.0.0",
     "@prisma/client": "^5.4.2",
     "argon2": "^0.31.1",
+    "axios": "^1.6.2",
     "crypto": "^1.0.1",
+    "form-data": "^4.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.5.2",
