most of errors of the backend is done , ( yarabi mayta3och des error khrin )

--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -4,18 +4,27 @@ WORKDIR /app
 
 COPY package*.json .
 
+
+
 RUN npm install 
 
 COPY . .
 
-RUN npm install argon2
-
-RUN npm install prisma --save-dev
-
-RUN npm install @prisma/client
-
 RUN npx prisma generate
 
-RUN npm run build
+ENTRYPOINT [ "npm", "run", "start:dev" ]
+# ENTRYPOINT [ "tail", "-f" ]
 
-ENTRYPOINT [ "npm", "run", "start:prod" ]
+# RUN npm install argon2
+
+# RUN npm install prisma --save-dev
+
+# RUN npm install @prisma/client
+
+
+
+
+
+# RUN npm run build
+
+# ENTRYPOINT [ "npm", "run", "start:prod" ]
