--- a/back-end/package.json
+++ b/back-end/package.json
@@ -35,6 +35,8 @@
     "@prisma/client": "^5.4.2",
     "argon2": "^0.31.1",
     "axios": "^1.6.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "form-data": "^4.0.0",
     "passport": "^0.6.0",
