--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name 192.168.1.103;
+    server_name 192.168.28.;
 
     location / {
         proxy_pass http://front-end:3000;
