--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name 192.168.28.;
+    server_name 192.168.28.239;
 
     location / {
         proxy_pass http://front-end:3000;
@@ -14,6 +14,6 @@ server {
     }
 
     location /api {
-        proxy_pass http://back-end:3333;
+        proxy_pass http://back-end:3333/api/;
     }
 }
