--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -3,7 +3,11 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name 192.168.28.239;
+    server_name 192.168.1.3;
+
+    location /api {
+        return http://localhost:3333/api/;
+    }
 
     location / {
         proxy_pass http://front-end:3000;
@@ -13,7 +17,12 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location /api {
-        proxy_pass http://back-end:3333/api/;
+    location /home {
+        proxy_pass http://front-end:3000/home;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
+
 }
