--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -12,6 +12,8 @@ COPY . .
 
 RUN chmod 777 script/script.sh
 
+RUN mkdir -p /avatar_users_images/
+
 ENTRYPOINT [ "script/script.sh" ]
 
 # ENTRYPOINT [ "npm", "run", "start:dev" ]
