--- a/back-end/package.json
+++ b/back-end/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto-js": "^4.2.0",
     "form-data": "^4.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
