--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -5,8 +5,16 @@ server {
 
     server_name 192.168.98.113;
 
-    location /api {
+    location /apiback {
         return http://localhost:3333/api/;
+    }
+
+    location /api {
+        proxy_pass http://back-end:3333/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location / {
