--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -3,19 +3,19 @@ server {
     listen 80;
     listen [::]:80;
 
-    server_name 192.168.0.225;
+    server_name 192.168.1.54;
 
-    location /apiback {
+    location /api {
         return http://localhost:3333/api/;
     }
 
-    location /api {
-        proxy_pass http://back-end:3333/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # location /api {
+    #     proxy_pass http://back-end:3333/;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header X-Forwarded-Proto $scheme;
+    # }
 
     location / {
         proxy_pass http://front-end:3000;
