--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
+    "datatables.net-dt": "^1.13.8",
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
