--- a/back-end/package.json
+++ b/back-end/package.json
@@ -41,6 +41,7 @@
     "crypto-js": "^4.2.0",
     "form-data": "^4.0.0",
     "passport": "^0.6.0",
+    "passport-42": "^1.2.6",
     "passport-jwt": "^4.0.1",
     "prisma": "^5.5.2",
     "qrcode": "^1.5.3",
