--- a/back-end/package.json
+++ b/back-end/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.3",
     "form-data": "^4.0.0",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
