--- a/back-end/package.json
+++ b/back-end/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.6.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cros": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.3",
     "form-data": "^4.0.0",
