--- a/back-end/package.json
+++ b/back-end/package.json
@@ -28,6 +28,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^2.0.3",
+    "@nestjs/platform-express": "^10.3.3",
+    "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/websockets": "^10.2.10",
+    "@types/socket.io": "^3.0.2",
+    "bcrypt": "^5.1.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/schedule": "^4.0.0",
@@ -40,6 +48,7 @@
     "cros": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.3",
+    "event-emitter": "^0.3.5",
     "form-data": "^4.0.0",
     "passport": "^0.6.0",
     "passport-42": "^1.2.6",
