--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,10 +10,16 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "@types/datatables.net-buttons": "1.4.10",
     "axios": "^1.6.5",
-    "datatables.net-dt": "^1.13.8",
     "react": "^18.2.0",
-    "react-data-table-component": "^7.6.2",
+    "react-data-table-component": "7.6.2",
+    "datatables.net": "2.0.0",
+    "datatables.net-buttons-dt": "3.0.0",
+    "datatables.net-dt": "2.0.0",
+    "datatables.net-jqui": "2.0.0",
+    "datatables.net-responsive": "3.0.0",
+    "jquery": "^3.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
