Working tow factor front and back and i faced a error related to bcrypt

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.4",
     "react-spinners": "^0.13.8",
     "swiper": "^11.0.5",
     "typescript": "^4.9.5",
