--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - dev-db
     ports:
       - "3333:3333"
+    volumes:
+      - avatars-volume:/app/public/avatars
+      - qrcodes-volume:/app/public/qrcodes
     networks:
       - transcendence
   dev-db:
@@ -21,6 +24,8 @@ services:
     restart: unless-stopped
     env_file:
       - /Users/$USER/Desktop/data_transcendence/env_files/.env_db
+    volumes:
+      - db-volume:/var/lib/postgresql/data
     networks:
       - transcendence
   front-end:
@@ -37,6 +42,26 @@ services:
       - /Users/$USER/Desktop/data_transcendence/env_files/.env_front_end
     networks:
       - transcendence
+
+volumes:
+  db-volume:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/$USER/Desktop/data_transcendence/data/db
+      o:  bind
+  avatars-volume:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/$USER/Desktop/data_transcendence/data/images/avatars
+      o:  bind
+  qrcodes-volume:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/$USER/Desktop/data_transcendence/data/images/qrcodes_users
+      o:  bind
 
 networks:
   transcendence:
