--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,7 +30,8 @@
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "socket.io-client": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
