--- a/back-end/package.json
+++ b/back-end/package.json
@@ -32,10 +32,10 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.3.3",
-    "@nestjs/platform-socket.io": "^10.2.10",
+    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.1.17",
-    "@nestjs/websockets": "^10.2.10",
+    "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.10.2",
     "@types/socket.io": "^3.0.2",
     "argon2": "^0.31.1",
@@ -55,9 +55,10 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.5.2",
     "qrcode": "^1.5.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
