--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,8 +30,13 @@
     "react-toastify": "^10.0.4",
     "swiper": "^11.0.5",
     "typescript": "^4.9.5",
+    "sweetalert2": "^11.10.6",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "three": "^0.162.0",
+    "rxjs": "^7.8.1",
+    "@types/three": "^0.162.0"
   },
   "scripts": {
     "start": "react-scripts start",
